@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2016 Eurotech and/or its affiliates and others
+ * Copyright (c) 2005, 2016 IBM Corporation and others.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -7,7 +7,8 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *     Eurotech - initial API and implementation
+ *     IBM Corporation - initial API and implementation
+ *     Eurotech
  *******************************************************************************/
 package org.eclipse.kapua.commons.configuration;
 
@@ -15,7 +16,6 @@ import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
 
 import org.eclipse.kapua.commons.configuration.metatype.TscalarImpl;
@@ -52,11 +52,12 @@ public class ValueTokenizer {
      */
     public ValueTokenizer(String values_str) {
 
-        if (values_str == null)
+        if (values_str == null) {
             return;
+        }
         // The trick is to strip out unescaped whitespace characters before and
-        // after the input string as well as before and after each 
-        // individual token within the input string without losing any escaped 
+        // after the input string as well as before and after each
+        // individual token within the input string without losing any escaped
         // whitespace characters. Whitespace between two non-whitespace
         // characters may or may not be escaped. Also, any character may be
         // escaped. The escape character is '\'. The delimiter is ','.
@@ -201,8 +202,7 @@ public class ValueTokenizer {
                 return MessageFormat.format(CARDINALITY_VIOLATION, new Object[] { getValuesAsString(), values.size(), 0, cardinality });
             }
             // Now inspect each token.
-            for (Iterator<String> i = values.iterator(); i.hasNext(); ) {
-                String s = i.next();
+            for (String s : values) {
                 // If options were declared and the value does not match one of them, the value is not valid.
                 if (!ad.getOption().isEmpty() && !ad.getOption().contains(s)) {
                     return MessageFormat.format(VALUE_OUT_OF_OPTION, s);
@@ -215,8 +215,8 @@ public class ValueTokenizer {
                 switch (adScalarType) {
                 case PASSWORD:
                 case STRING:
-                    minVal = ad.getMin() == null ? null : new Integer(ad.getMin());
-                    maxVal = ad.getMax() == null ? null : new Integer(ad.getMax());
+                    minVal = ad.getMin() == null ? null : Integer.valueOf(ad.getMin());
+                    maxVal = ad.getMax() == null ? null : Integer.valueOf(ad.getMax());
                     if (minVal != null && s.length() < (Integer) maxVal) {
                         rangeError = true;
                     } else if (maxVal != null && s.length() > (Integer) maxVal) {
@@ -224,9 +224,9 @@ public class ValueTokenizer {
                     }
                     break;
                 case INTEGER:
-                    minVal = ad.getMin() == null ? null : new Integer(ad.getMin());
-                    maxVal = ad.getMax() == null ? null : new Integer(ad.getMax());
-                    Integer intVal = new Integer(s);
+                    minVal = ad.getMin() == null ? null : Integer.valueOf(ad.getMin());
+                    maxVal = ad.getMax() == null ? null : Integer.valueOf(ad.getMax());
+                    Integer intVal = Integer.valueOf(s);
                     if (minVal != null && intVal.compareTo((Integer) minVal) < 0) {
                         rangeError = true;
                     } else if (maxVal != null && intVal.compareTo((Integer) maxVal) > 0) {
@@ -234,9 +234,9 @@ public class ValueTokenizer {
                     }
                     break;
                 case LONG:
-                    minVal = ad.getMin() == null ? null : new Long(ad.getMin());
-                    maxVal = ad.getMax() == null ? null : new Long(ad.getMax());
-                    Long longVal = new Long(s);
+                    minVal = ad.getMin() == null ? null : Long.valueOf(ad.getMin());
+                    maxVal = ad.getMax() == null ? null : Long.valueOf(ad.getMax());
+                    Long longVal = Long.valueOf(s);
                     if (ad.getMin() != null && longVal.compareTo((Long) minVal) < 0) {
                         rangeError = true;
                     } else if (maxVal != null && longVal.compareTo((Long) maxVal) > 0) {
@@ -244,9 +244,9 @@ public class ValueTokenizer {
                     }
                     break;
                 case DOUBLE:
-                    minVal = ad.getMin() == null ? null : new Double(ad.getMin());
-                    maxVal = ad.getMax() == null ? null : new Double(ad.getMax());
-                    Double doubleVal = new Double(s);
+                    minVal = ad.getMin() == null ? null : Double.valueOf(ad.getMin());
+                    maxVal = ad.getMax() == null ? null : Double.valueOf(ad.getMax());
+                    Double doubleVal = Double.valueOf(s);
                     if (minVal != null && doubleVal.compareTo((Double) minVal) < 0) {
                         rangeError = true;
                     } else if (maxVal != null && doubleVal.compareTo((Double) maxVal) > 0) {
@@ -258,9 +258,9 @@ public class ValueTokenizer {
                     // Seems unnecessary to impose any further restrictions.
                     break;
                 case CHAR:
-                    minVal = ad.getMin() == null ? null : new Character(ad.getMin().charAt(0));
-                    maxVal = ad.getMax() == null ? null : new Character(ad.getMax().charAt(0));
-                    Character charVal = new Character(s.charAt(0));
+                    minVal = ad.getMin() == null ? null : Character.valueOf(ad.getMin().charAt(0));
+                    maxVal = ad.getMax() == null ? null : Character.valueOf(ad.getMax().charAt(0));
+                    Character charVal = Character.valueOf(s.charAt(0));
                     if (minVal != null && charVal.compareTo((Character) minVal) < 0) {
                         rangeError = true;
                     } else if (maxVal != null && charVal.compareTo((Character) maxVal) > 0) {
@@ -268,9 +268,9 @@ public class ValueTokenizer {
                     }
                     break;
                 case FLOAT:
-                    minVal = ad.getMin() == null ? null : new Float(ad.getMin());
-                    maxVal = ad.getMax() == null ? null : new Float(ad.getMax());
-                    Float floatVal = new Float(s);
+                    minVal = ad.getMin() == null ? null : Float.valueOf(ad.getMin());
+                    maxVal = ad.getMax() == null ? null : Float.valueOf(ad.getMax());
+                    Float floatVal = Float.valueOf(s);
                     if (minVal != null && floatVal.compareTo((Float) minVal) < 0) {
                         rangeError = true;
                     } else if (maxVal != null && floatVal.compareTo((Float) maxVal) > 0) {
@@ -278,9 +278,9 @@ public class ValueTokenizer {
                     }
                     break;
                 case SHORT:
-                    minVal = ad.getMin() == null ? null : new Short(ad.getMin());
-                    maxVal = ad.getMax() == null ? null : new Short(ad.getMax());
-                    Short shortVal = new Short(s);
+                    minVal = ad.getMin() == null ? null : Short.valueOf(ad.getMin());
+                    maxVal = ad.getMax() == null ? null : Short.valueOf(ad.getMax());
+                    Short shortVal = Short.valueOf(s);
                     if (minVal != null && shortVal.compareTo((Short) minVal) < 0) {
                         rangeError = true;
                     } else if (maxVal != null && shortVal.compareTo((Short) maxVal) > 0) {
@@ -288,9 +288,9 @@ public class ValueTokenizer {
                     }
                     break;
                 case BYTE:
-                    minVal = ad.getMin() == null ? null : new Byte(ad.getMin());
-                    maxVal = ad.getMax() == null ? null : new Byte(ad.getMax());
-                    Byte byteVal = new Byte(s);
+                    minVal = ad.getMin() == null ? null : Byte.valueOf(ad.getMin());
+                    maxVal = ad.getMax() == null ? null : Byte.valueOf(ad.getMax());
+                    Byte byteVal = Byte.valueOf(s);
                     if (minVal != null && byteVal.compareTo((Byte) minVal) < 0) {
                         rangeError = true;
                     } else if (maxVal != null && byteVal.compareTo((Byte) maxVal) > 0) {
@@ -301,7 +301,7 @@ public class ValueTokenizer {
                     throw new IllegalStateException();
                 }
                 if (rangeError) {
-                    return (MessageFormat.format(VALUE_OUT_OF_RANGE, s));
+                    return MessageFormat.format(VALUE_OUT_OF_RANGE, s);
                 }
             }
             // No problems detected
