@@ -12,10 +12,12 @@
  *******************************************************************************/
 package org.eclipse.kapua.service.datastore.internal;
 
+import static java.util.Objects.requireNonNull;
+import static org.eclipse.kapua.service.datastore.internal.Elasticsearch.refreshAllIndices;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.text.SimpleDateFormat;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -27,6 +29,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang.ArrayUtils;
 import org.apache.commons.lang.StringUtils;
@@ -50,6 +54,8 @@ import org.eclipse.kapua.service.datastore.MessageStoreService;
 import org.eclipse.kapua.service.datastore.MetricInfoRegistryService;
 import org.eclipse.kapua.service.datastore.internal.elasticsearch.ChannelInfoField;
 import org.eclipse.kapua.service.datastore.internal.elasticsearch.ClientInfoField;
+import org.eclipse.kapua.service.datastore.internal.elasticsearch.DatastoreMediator;
+import org.eclipse.kapua.service.datastore.internal.elasticsearch.ElasticsearchClient;
 import org.eclipse.kapua.service.datastore.internal.elasticsearch.EsSchema;
 import org.eclipse.kapua.service.datastore.internal.elasticsearch.MessageField;
 import org.eclipse.kapua.service.datastore.internal.elasticsearch.MessageStoreConfiguration;
@@ -64,8 +70,6 @@ import org.eclipse.kapua.service.datastore.internal.model.query.MessageQueryImpl
 import org.eclipse.kapua.service.datastore.internal.model.query.MetricInfoQueryImpl;
 import org.eclipse.kapua.service.datastore.internal.model.query.RangePredicateImpl;
 import org.eclipse.kapua.service.datastore.internal.model.query.SortFieldImpl;
-import org.eclipse.kapua.service.datastore.internal.setting.DatastoreSettingKey;
-import org.eclipse.kapua.service.datastore.internal.setting.DatastoreSettings;
 import org.eclipse.kapua.service.datastore.model.ChannelInfo;
 import org.eclipse.kapua.service.datastore.model.ChannelInfoListResult;
 import org.eclipse.kapua.service.datastore.model.ClientInfo;
@@ -91,16 +95,17 @@ import org.eclipse.kapua.service.device.registry.Device;
 import org.eclipse.kapua.service.device.registry.DeviceCreator;
 import org.eclipse.kapua.service.device.registry.DeviceFactory;
 import org.eclipse.kapua.service.device.registry.DeviceRegistryService;
+import org.elasticsearch.action.admin.indices.delete.DeleteIndexAction;
+import org.elasticsearch.action.admin.indices.delete.DeleteIndexRequest;
+import org.junit.Before;
 import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
 
-    private static final Logger s_logger = LoggerFactory.getLogger(MessageStoreServiceTest.class);
-    private static final long QUERY_TIME_WINDOW = 2000l;
+    private static final Logger logger = LoggerFactory.getLogger(MessageStoreServiceTest.class);
     private static final long PUBLISH_DATE_TEST_CHECK_TIME_WINDOW = 1000l;
-    private static final long INDEX_TIME_ESTIMATE_SECONDS = 10; // Trail and error value depends on system where tests are run
 
     private static final DeviceRegistryService deviceRegistryService = KapuaLocator.getInstance().getService(DeviceRegistryService.class);
     private static final DeviceFactory deviceFactory = KapuaLocator.getInstance().getFactory(DeviceFactory.class);
@@ -110,7 +115,25 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
     private static final MetricInfoRegistryService metricInfoRegistryService = KapuaLocator.getInstance().getService(MetricInfoRegistryService.class);
     private static final ClientInfoRegistryService clientInfoRegistryService = KapuaLocator.getInstance().getService(ClientInfoRegistryService.class);
 
-    private Duration elasticsearchRefreshTime = Duration.ofSeconds((DatastoreSettings.getInstance().getLong(DatastoreSettingKey.ELASTICSEARCH_IDX_REFRESH_INTERVAL) + INDEX_TIME_ESTIMATE_SECONDS) );
+    /**
+     * This method deletes all indices of the current ES instance
+     * <p>
+     * The method deletes all indices and resets the Kapua internal singleton state.
+     * This is required to ensure that each unit test, as it currently expects, starts with an empty ES setup
+     * </p>
+     * 
+     * @throws Exception
+     *             any case anything goes wrong
+     */
+    @Before
+    public void deleteAllIndices() throws Exception {
+        final DeleteIndexRequest request = DeleteIndexAction.INSTANCE.newRequestBuilder(ElasticsearchClient.getInstance()).request();
+        request.indices("_all");
+
+        ElasticsearchClient.getInstance().admin().indices().delete(request);
+
+        DatastoreMediator.getInstance().clearCache();
+    }
 
     @Test
     /**
@@ -148,13 +171,13 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
 
             KapuaDataPayloadImpl messagePayload = new KapuaDataPayloadImpl();
 
-            Map<String, Object> metrics = new HashMap<String, Object>();
-            metrics.put("float_int", new Float((float) (i + 1)));
-            metrics.put("float_float", new Float((float) (i + 1) * 0.01));
-            metrics.put("integer_value", new Integer((i + 1)));
+            Map<String, Object> metrics = new HashMap<>();
+            metrics.put("float_int", Float.valueOf(i + 1));
+            metrics.put("float_float", Float.valueOf((i + 1) * 0.01f));
+            metrics.put("integer_value", Integer.valueOf(i + 1));
             metrics.put("double_int", (double) (i + 1));
-            metrics.put("double_float", (double) (i + 1) * 0.01);
-            metrics.put("long_long", (long) (10000000000000l * (i + 1)));
+            metrics.put("double_float", (i + 1) * 0.01);
+            metrics.put("long_long", 10000000000000l * (i + 1));
             metrics.put("long_int_1", (long) (1000 * (i + 1)));
             metrics.put("long_int_2", (long) (i + 1));
             metrics.put("string_value", Integer.toString((i + 1) * 1000));
@@ -164,14 +187,20 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
             Date receivedOn = new Date();
             Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
             Date capturedOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2016").getTime());
-            message = getMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-            updateChannel(message, semanticTopic[i % semanticTopic.length]);
+            message = createMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+            setChannel(message, semanticTopic[i % semanticTopic.length]);
             updatePayload(message, messagePayload);
             KapuaPosition messagePosition = getPosition(10.00d * (i + 1), 12d * (i + 1), 1.123d * (i + 1), 2d * (i + 1), 0001d * (i + 1), 1000 * (i + 1), 1d * (i + 1), 44 * (i + 1), new Date());
             message.setPosition(messagePosition);
             List<StorableId> messageStoredIds = null;
             try {
-                messageStoredIds = insertMessages(true, message);
+                messageStoredIds = insertMessages(message);
+
+                // Refresh indices before querying
+
+                refreshAllIndices(ElasticsearchClient.getInstance());
+
+                // start queries
 
                 DatastoreMessage messageQueried = messageStoreService.find(account.getId(), messageStoredIds.get(0), StorableFetchStyle.SOURCE_FULL);
                 checkMessageId(messageQueried, messageStoredIds.get(0));
@@ -180,10 +209,10 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
                 checkMetricsSize(messageQueried, metrics.size());
                 checkMetrics(messageQueried, metrics);
                 checkPosition(messageQueried, messagePosition);
-                checkMessageDate(messageQueried, new Range<Date>("timestamp", capturedOn), new Range<Date>("sentOn", sentOn), new Range<Date>("capturedOn", capturedOn),
-                        new Range<Date>("receivedOn", receivedOn));
+                checkMessageDate(messageQueried, new Range<>("timestamp", capturedOn), new Range<>("sentOn", sentOn), new Range<>("capturedOn", capturedOn),
+                        new Range<>("receivedOn", receivedOn));
             } catch (KapuaException e) {
-                s_logger.error("Exception: ", e.getMessage(), e);
+                logger.error("Exception: ", e.getMessage(), e);
             }
         }
     }
@@ -237,7 +266,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
                 sentOn = sentOn2;
             }
             Date capturedOn = null;
-            if (i < messagesCount / 4 - 1 || (i > messagesCount / 2 - 1 && i < messagesCount * 3 / 4 - 1)) {
+            if (i < messagesCount / 4 - 1 || i > messagesCount / 2 - 1 && i < messagesCount * 3 / 4 - 1) {
                 capturedOn = capturedOn1;
                 if (i % 2 == 0) {
                     clientId = clientId2;
@@ -250,24 +279,30 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
                     device = device2;
                 }
             }
-            message = getMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-            updateChannel(message, semanticTopic[i % semanticTopic.length]);
-            insertMessages(false, message);
+            message = createMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+            setChannel(message, semanticTopic[i % semanticTopic.length]);
+            insertMessages(message);
         }
-        waitEsRefresh();
-        List<SortField> sort = new ArrayList<SortField>();
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
+
+        List<OrderConstraint<?>> sort = new ArrayList<>();
         SortField sortSentOn = new SortFieldImpl();
         sortSentOn.setField(EsSchema.MESSAGE_SENT_ON);
         sortSentOn.setSortDirection(SortDirection.DESC);
-        sort.add(sortSentOn);
+        sort.add(orderConstraint(sortSentOn, Date.class));
         SortField sortTimestamp = new SortFieldImpl();
         sortTimestamp.setField(EsSchema.MESSAGE_TIMESTAMP);
         sortTimestamp.setSortDirection(SortDirection.ASC);
-        sort.add(sortTimestamp);
+        sort.add(orderConstraint(sortTimestamp, Date.class));
         SortField sortClientId = new SortFieldImpl();
         sortClientId.setField(EsSchema.MESSAGE_CLIENT_ID);
         sortClientId.setSortDirection(SortDirection.DESC);
-        sort.add(sortClientId);
+        sort.add(orderConstraint(sortClientId, String.class));
         MessageQuery messageQuery = getMessageOrderedQuery(account.getId(), messagesCount + 1, sort);
         setMessageQueryBaseCriteria(messageQuery, new DateRange(capturedOn1, capturedOn2));
 
@@ -275,7 +310,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         checkMessagesCount(messageList, messagesCount);
         checkMessagesDateBound(messageList, new Date(capturedOn1.getTime()), new Date(capturedOn2.getTime()));
         for (DatastoreMessage messageStored : messageList.getItems()) {
-            s_logger.debug("message sentOn: '" + messageStored.getSentOn() + "' - capturedOn: '" + messageStored.getCapturedOn() + "' clientId: '" + messageStored.getClientId() + "'");
+            logger.debug("message sentOn: '" + messageStored.getSentOn() + "' - capturedOn: '" + messageStored.getCapturedOn() + "' clientId: '" + messageStored.getClientId() + "'");
         }
         checkListOrder(messageList, sort);
     }
@@ -298,17 +333,23 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message = getMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message, topicSemanticPart);
+        KapuaDataMessage message = createMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message, topicSemanticPart);
         updatePayload(message, null);
         message.setReceivedOn(messageTime);
 
         // leave the message index by as default (DEVICE_TIMESTAMP)
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        List<StorableId> messageStoredIds = insertMessages(true, message);
+        List<StorableId> messageStoredIds = insertMessages(message);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         MessageQuery messageQuery = getBaseMessageQuery(account.getId());
-        setMessageQueryBaseCriteria(messageQuery, new DateRange(capturedOn));
+        setMessageQueryBaseCriteria(messageQuery, null);
 
         MessageListResult result = messageStoreService.query(messageQuery);
         DatastoreMessage messageQueried = checkMessagesCount(result, 1);
@@ -316,8 +357,8 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         checkMessageBody(messageQueried, null);
         checkMetricsSize(messageQueried, 0);
         checkPosition(messageQueried, null);
-        checkMessageDate(messageQueried, new Range<Date>("timestamp", capturedOn), new Range<Date>("sentOn", sentOn), new Range<Date>("capturedOn", capturedOn),
-                new Range<Date>("receivedOn", messageTime));
+        checkMessageDate(messageQueried, new Range<>("timestamp", capturedOn), new Range<>("sentOn", sentOn), new Range<>("capturedOn", capturedOn),
+                new Range<>("receivedOn", messageTime));
     }
 
     @Test
@@ -338,21 +379,24 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message = getMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message, topicSemanticPart);
+        KapuaDataMessage message = createMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message, topicSemanticPart);
         updatePayload(message, null);
         message.setReceivedOn(messageTime);
 
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.SERVER_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
         messageTime = new Date();
         message.setReceivedOn(messageTime);
-        List<StorableId> messageStoredIds = insertMessages(true, message);
+        List<StorableId> messageStoredIds = insertMessages(message);
 
-        Date timestampLowerBound = new Date(messageTime.getTime() - QUERY_TIME_WINDOW);
-        Date timestampUpperBound = new Date(messageTime.getTime() + QUERY_TIME_WINDOW);
-        DateRange dateRange = new DateRange(timestampLowerBound, timestampUpperBound);
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
+
         MessageQuery messageQuery = getBaseMessageQuery(account.getId());
-        setMessageQueryBaseCriteria(messageQuery, dateRange);
+        setMessageQueryBaseCriteria(messageQuery, null);
 
         MessageListResult result = messageStoreService.query(messageQuery);
         DatastoreMessage messageQueried = checkMessagesCount(result, 1);
@@ -361,9 +405,11 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         checkMessageBody(messageQueried, null);
         checkMetricsSize(messageQueried, 0);
         checkPosition(messageQueried, null);
-        checkMessageDate(messageQueried, new Range<Date>("timestamp", dateRange.getLowerBound(), dateRange.getUpperBound()), new Range<Date>("sentOn", sentOn),
-                new Range<Date>("capturedOn", capturedOn),
-                new Range<Date>("receivedOn", messageTime));
+        checkMessageDate(messageQueried,
+                new Range<>("timestamp", messageTime, new Date(messageTime.getTime() + 10_000)),
+                new Range<>("sentOn", sentOn),
+                new Range<>("capturedOn", capturedOn),
+                new Range<>("receivedOn", messageTime));
     }
 
     @Test
@@ -385,29 +431,35 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[0]);
+        KapuaDataMessage message2 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[0]);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[2], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message3, semanticTopic[0]);
+        KapuaDataMessage message3 = createMessage(clientIds[2], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message3, semanticTopic[0]);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message4, semanticTopic[0]);
+        KapuaDataMessage message4 = createMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message4, semanticTopic[0]);
         message4.setReceivedOn(messageTime);
-        KapuaDataMessage message5 = getMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message5, semanticTopic[0]);
+        KapuaDataMessage message5 = createMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message5, semanticTopic[0]);
         message5.setReceivedOn(messageTime);
-        KapuaDataMessage message6 = getMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message6, semanticTopic[0]);
+        KapuaDataMessage message6 = createMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message6, semanticTopic[0]);
         message6.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3, message4, message5, message6);
+        insertMessages(message1, message2, message3, message4, message5, message6);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ChannelInfoQuery channelInfoQuery = getBaseChannelInfoQuery(account.getId());
-        setChannelInfoQueryBaseCriteria(channelInfoQuery, new DateRange(messageTime));
+        setChannelInfoQueryBaseCriteria(channelInfoQuery, null);
 
         ChannelInfoListResult channelList = channelInfoRegistryService.query(channelInfoQuery);
         checkChannelInfoClientIdsAndTopics(channelList, 4, clientIds, semanticTopic);
@@ -436,20 +488,26 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date capturedOnSecondMessage = new Date(capturedOn.getTime() + PUBLISH_DATE_TEST_CHECK_TIME_WINDOW);
         Date capturedOnThirdMessage = new Date(capturedOnSecondMessage.getTime() + PUBLISH_DATE_TEST_CHECK_TIME_WINDOW);
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[0]);
+        KapuaDataMessage message2 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[0]);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnSecondMessage, sentOn);
-        updateChannel(message3, semanticTopic[0]);
+        KapuaDataMessage message3 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnSecondMessage, sentOn);
+        setChannel(message3, semanticTopic[0]);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnThirdMessage, sentOn);
-        updateChannel(message4, semanticTopic[0]);
+        KapuaDataMessage message4 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnThirdMessage, sentOn);
+        setChannel(message4, semanticTopic[0]);
         message4.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3, message4);
+        insertMessages(message1, message2, message3, message4);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ChannelInfoQuery channelInfoQuery = getBaseChannelInfoQuery(account.getId());
         setChannelInfoQueryBaseCriteria(channelInfoQuery, new DateRange(messageTime, capturedOnThirdMessage));
@@ -487,29 +545,35 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[1]);
+        KapuaDataMessage message2 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[1]);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message3, semanticTopic[2]);
+        KapuaDataMessage message3 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message3, semanticTopic[2]);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message4, semanticTopic[3]);
+        KapuaDataMessage message4 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message4, semanticTopic[3]);
         message4.setReceivedOn(messageTime);
-        KapuaDataMessage message5 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message5, semanticTopic[0]);
+        KapuaDataMessage message5 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message5, semanticTopic[0]);
         message5.setReceivedOn(messageTime);
-        KapuaDataMessage message6 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message6, semanticTopic[1]);
+        KapuaDataMessage message6 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message6, semanticTopic[1]);
         message6.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3, message4, message5, message6);
+        insertMessages(message1, message2, message3, message4, message5, message6);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ChannelInfoQuery channelInfoQuery = getBaseChannelInfoQuery(account.getId());
-        setChannelInfoQueryBaseCriteria(channelInfoQuery, new DateRange(messageTime));
+        setChannelInfoQueryBaseCriteria(channelInfoQuery, null);
 
         ChannelInfoListResult channelList = channelInfoRegistryService.query(channelInfoQuery);
         checkChannelInfoClientIdsAndTopics(channelList, 6, clientIds, semanticTopic);
@@ -534,29 +598,35 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[1]);
+        KapuaDataMessage message2 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[1]);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message3, semanticTopic[2]);
+        KapuaDataMessage message3 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message3, semanticTopic[2]);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message4, semanticTopic[3]);
+        KapuaDataMessage message4 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message4, semanticTopic[3]);
         message4.setReceivedOn(messageTime);
-        KapuaDataMessage message5 = getMessage(clientIds[0] + "_NO", account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message5, semanticTopic[2]);
+        KapuaDataMessage message5 = createMessage(clientIds[0] + "_NO", account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message5, semanticTopic[2]);
         message5.setReceivedOn(messageTime);
-        KapuaDataMessage message6 = getMessage(clientIds[0] + "_NO", account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message6, semanticTopic[3]);
+        KapuaDataMessage message6 = createMessage(clientIds[0] + "_NO", account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message6, semanticTopic[3]);
         message6.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3, message4, message5, message6);
+        insertMessages(message1, message2, message3, message4, message5, message6);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ChannelInfoQuery channelInfoQuery = getBaseChannelInfoQuery(account.getId());
-        setChannelInfoQueryBaseCriteria(channelInfoQuery, clientIds[0], new DateRange(messageTime));
+        setChannelInfoQueryBaseCriteria(channelInfoQuery, clientIds[0], null);
 
         ChannelInfoListResult channelList = channelInfoRegistryService.query(channelInfoQuery);
         checkChannelInfoClientIdsAndTopics(channelList, 4, clientIds, semanticTopic);
@@ -582,23 +652,29 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         initMetrics(message1);
-        message1.getPayload().getProperties().put(metrics[0], new Double(123));
-        message1.getPayload().getProperties().put(metrics[1], new Integer(123));
+        message1.getPayload().getProperties().put(metrics[0], Double.valueOf(123));
+        message1.getPayload().getProperties().put(metrics[1], Integer.valueOf(123));
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[0]);
+        KapuaDataMessage message2 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[0]);
         initMetrics(message2);
-        message2.getPayload().getProperties().put(metrics[2], new String("123"));
-        message2.getPayload().getProperties().put(metrics[3], new Boolean(true));
+        message2.getPayload().getProperties().put(metrics[2], String.valueOf("123"));
+        message2.getPayload().getProperties().put(metrics[3], Boolean.valueOf(true));
         message2.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2);
+        insertMessages(message1, message2);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         MetricInfoQuery metricInfoQuery = getBaseMetricInfoQuery(account.getId());
-        setMetricInfoQueryBaseCriteria(metricInfoQuery, new DateRange(capturedOn));
+        setMetricInfoQueryBaseCriteria(metricInfoQuery, null);
 
         MetricInfoListResult metricList = metricInfoRegistryService.query(metricInfoQuery);
         checkMetricInfoClientIdsAndMetricNames(metricList, 4, clientIds, metrics);
@@ -628,34 +704,40 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date capturedOnSecondMessage = new Date(capturedOn.getTime() + PUBLISH_DATE_TEST_CHECK_TIME_WINDOW);
         Date capturedOnThirdMessage = new Date(capturedOnSecondMessage.getTime() + PUBLISH_DATE_TEST_CHECK_TIME_WINDOW);
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         initMetrics(message1);
-        message1.getPayload().getProperties().put(metrics[0], new Double(123));
-        message1.getPayload().getProperties().put(metrics[1], new Integer(123));
+        message1.getPayload().getProperties().put(metrics[0], Double.valueOf(123));
+        message1.getPayload().getProperties().put(metrics[1], Integer.valueOf(123));
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[0]);
+        KapuaDataMessage message2 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[0]);
         initMetrics(message2);
-        message2.getPayload().getProperties().put(metrics[2], new String("123"));
-        message2.getPayload().getProperties().put(metrics[3], new Boolean(true));
+        message2.getPayload().getProperties().put(metrics[2], "123");
+        message2.getPayload().getProperties().put(metrics[3], Boolean.TRUE);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnSecondMessage, sentOn);
-        updateChannel(message3, semanticTopic[0]);
+        KapuaDataMessage message3 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnSecondMessage, sentOn);
+        setChannel(message3, semanticTopic[0]);
         initMetrics(message3);
-        message3.getPayload().getProperties().put(metrics[2], new String("123"));
-        message3.getPayload().getProperties().put(metrics[3], new Boolean(true));
+        message3.getPayload().getProperties().put(metrics[2], "123");
+        message3.getPayload().getProperties().put(metrics[3], Boolean.TRUE);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnThirdMessage, sentOn);
-        updateChannel(message4, semanticTopic[0]);
+        KapuaDataMessage message4 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnThirdMessage, sentOn);
+        setChannel(message4, semanticTopic[0]);
         initMetrics(message4);
-        message4.getPayload().getProperties().put(metrics[2], new String("123"));
-        message4.getPayload().getProperties().put(metrics[3], new Boolean(true));
+        message4.getPayload().getProperties().put(metrics[2], "123");
+        message4.getPayload().getProperties().put(metrics[3], Boolean.TRUE);
         message4.setReceivedOn(messageTime);
 
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
         // Store messages
-        insertMessages(true, message1, message2, message3, message4);
+        insertMessages(message1, message2, message3, message4);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         MetricInfoQuery metricInfoQuery = getBaseMetricInfoQuery(account.getId());
         setMetricInfoQueryBaseCriteria(metricInfoQuery, new DateRange(capturedOn, capturedOnThirdMessage));
@@ -702,29 +784,35 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         initMetrics(message1);
-        message1.getPayload().getProperties().put(metrics[0], new Double(123));
-        message1.getPayload().getProperties().put(metrics[1], new Integer(123));
+        message1.getPayload().getProperties().put(metrics[0], Double.valueOf(123));
+        message1.getPayload().getProperties().put(metrics[1], Integer.valueOf(123));
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[0]);
+        KapuaDataMessage message2 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[0]);
         initMetrics(message2);
-        message2.getPayload().getProperties().put(metrics[2], new String("123"));
-        message2.getPayload().getProperties().put(metrics[3], new Boolean(true));
+        message2.getPayload().getProperties().put(metrics[2], "123");
+        message2.getPayload().getProperties().put(metrics[3], Boolean.TRUE);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message3, semanticTopic[0]);
+        KapuaDataMessage message3 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message3, semanticTopic[0]);
         initMetrics(message3);
-        message3.getPayload().getProperties().put(metrics[2], new Double(123));
-        message3.getPayload().getProperties().put(metrics[3], new Integer(123));
+        message3.getPayload().getProperties().put(metrics[2], Double.valueOf(123));
+        message3.getPayload().getProperties().put(metrics[3], Integer.valueOf(123));
         message3.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3);
+        insertMessages(message1, message2, message3);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         MetricInfoQuery metricInfoQuery = getBaseMetricInfoQuery(account.getId());
-        setMetricInfoQueryBaseCriteria(metricInfoQuery, clientIds[0], new DateRange(capturedOn));
+        setMetricInfoQueryBaseCriteria(metricInfoQuery, clientIds[0], null);
 
         MetricInfoListResult metricList = metricInfoRegistryService.query(metricInfoQuery);
         checkMetricInfoClientIdsAndMetricNames(metricList, 4, new String[] { clientIds[0] }, metrics);
@@ -788,7 +876,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
                 sentOn = sentOn2;
             }
             Date capturedOn = null;
-            if (i < messagesCount / 4 - 1 || (i > messagesCount / 2 - 1 && i < messagesCount * 3 / 4 - 1)) {
+            if (i < messagesCount / 4 - 1 || i > messagesCount / 2 - 1 && i < messagesCount * 3 / 4 - 1) {
                 capturedOn = capturedOn1;
                 if (i % 2 == 0) {
                     clientId = clientIds[1];
@@ -801,8 +889,8 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
                     device = device2;
                 }
             }
-            KapuaDataMessage message = getMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-            updateChannel(message, semanticTopic[i % semanticTopic.length]);
+            KapuaDataMessage message = createMessage(clientId, account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+            setChannel(message, semanticTopic[i % semanticTopic.length]);
             // insert metrics
             initMetrics(message);
             message.getPayload().getProperties().put(metrics[0], metricsValuesDate[i % metricsValuesDate.length]);
@@ -811,15 +899,20 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
             message.getPayload().getProperties().put(metrics[3], metricsValuesFloat[i % metricsValuesFloat.length]);
             message.getPayload().getProperties().put(metrics[4], metricsValuesBoolean[i % metricsValuesBoolean.length]);
             message.getPayload().getProperties().put(metrics[5], metricsValuesDouble[i % metricsValuesDouble.length]);
-            insertMessages(false, message);
+            insertMessages(message);
         }
-        waitEsRefresh();
 
-        List<SortField> sort = new ArrayList<SortField>();
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
+
+        List<OrderConstraint<?>> sort = new ArrayList<>();
         SortField sortMetricName = new SortFieldImpl();
         sortMetricName.setField(EsSchema.METRIC_MTR_NAME_FULL);
         sortMetricName.setSortDirection(SortDirection.ASC);
-        sort.add(sortMetricName);
+        sort.add(orderConstraint(sortMetricName, String.class));
 
         MetricInfoQuery metricInfoQuery = getMetricInfoOrderedQuery(account.getId(), (6 + 1) * messagesCount, sort);
         setMetricInfoQueryBaseCriteria(metricInfoQuery, new DateRange(capturedOn1, capturedOn2));
@@ -830,7 +923,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         checkMetricDateBound(metricList, new Date(capturedOn1.getTime()), new Date(capturedOn2.getTime()));
 
         for (MetricInfo metricInfo : metricList.getItems()) {
-            s_logger.debug("metric client id: '" + metricInfo.getClientId() + "' - channel: '" + metricInfo.getChannel() + "' metric name: '" + metricInfo.getName()
+            logger.debug("metric client id: '" + metricInfo.getClientId() + "' - channel: '" + metricInfo.getChannel() + "' metric name: '" + metricInfo.getName()
                     + "' metric type: '" + metricInfo.getMetricType() + "'");
         }
         checkListOrder(metricList, sort);
@@ -855,27 +948,33 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         initMetrics(message1);
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[1]);
+        KapuaDataMessage message2 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[1]);
         initMetrics(message2);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message3, semanticTopic[2]);
+        KapuaDataMessage message3 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message3, semanticTopic[2]);
         initMetrics(message3);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message4, semanticTopic[3]);
+        KapuaDataMessage message4 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message4, semanticTopic[3]);
         initMetrics(message4);
         message4.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3, message4);
+        insertMessages(message1, message2, message3, message4);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ClientInfoQuery clientInfoQuery = getBaseClientInfoQuery(account.getId());
-        setClientInfoQueryBaseCriteria(clientInfoQuery, new DateRange(capturedOn));
+        setClientInfoQueryBaseCriteria(clientInfoQuery, null);
 
         ClientInfoListResult clientList = clientInfoRegistryService.query(clientInfoQuery);
         checkClientInfo(clientList, 2, clientIds);
@@ -902,24 +1001,30 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date capturedOnSecondMessage = new Date(capturedOn.getTime() + PUBLISH_DATE_TEST_CHECK_TIME_WINDOW);
         Date capturedOnThirdMessage = new Date(capturedOnSecondMessage.getTime() + PUBLISH_DATE_TEST_CHECK_TIME_WINDOW);
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         initMetrics(message1);
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[0]);
+        KapuaDataMessage message2 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[0]);
         initMetrics(message2);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnSecondMessage, sentOn);
-        updateChannel(message3, semanticTopic[0]);
+        KapuaDataMessage message3 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnSecondMessage, sentOn);
+        setChannel(message3, semanticTopic[0]);
         initMetrics(message3);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnThirdMessage, sentOn);
-        updateChannel(message4, semanticTopic[0]);
+        KapuaDataMessage message4 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOnThirdMessage, sentOn);
+        setChannel(message4, semanticTopic[0]);
         initMetrics(message4);
         message4.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3, message4);
+        insertMessages(message1, message2, message3, message4);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ClientInfoQuery clientInfoQuery = getBaseClientInfoQuery(account.getId());
         setClientInfoQueryBaseCriteria(clientInfoQuery, new DateRange(capturedOn, capturedOnThirdMessage));
@@ -955,27 +1060,33 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date sentOn = new Date(new SimpleDateFormat("dd/MM/yyyy").parse("01/01/2015").getTime());
         Date capturedOn = new Date();
         Date receivedOn = new Date();
-        KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message1, semanticTopic[0]);
+        KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message1, semanticTopic[0]);
         initMetrics(message1);
         message1.setReceivedOn(messageTime);
-        KapuaDataMessage message2 = getMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message2, semanticTopic[1]);
+        KapuaDataMessage message2 = createMessage(clientIds[1], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message2, semanticTopic[1]);
         initMetrics(message2);
         message2.setReceivedOn(messageTime);
-        KapuaDataMessage message3 = getMessage(clientIds[2], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message3, semanticTopic[0]);
+        KapuaDataMessage message3 = createMessage(clientIds[2], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message3, semanticTopic[0]);
         initMetrics(message3);
         message3.setReceivedOn(messageTime);
-        KapuaDataMessage message4 = getMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-        updateChannel(message4, semanticTopic[1]);
+        KapuaDataMessage message4 = createMessage(clientIds[3], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+        setChannel(message4, semanticTopic[1]);
         initMetrics(message4);
         message4.setReceivedOn(messageTime);
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
-        insertMessages(true, message1, message2, message3, message4);
+        insertMessages(message1, message2, message3, message4);
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ClientInfoQuery clientInfoQuery = getBaseClientInfoQuery(account.getId());
-        setClientInfoQueryBaseCriteria(clientInfoQuery, clientIds[0], new DateRange(capturedOn));
+        setClientInfoQueryBaseCriteria(clientInfoQuery, clientIds[0], null);
 
         ClientInfoListResult clientList = clientInfoRegistryService.query(clientInfoQuery);
         checkClientInfo(clientList, 1, new String[] { clientIds[0] });
@@ -1000,12 +1111,17 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         Date receivedOn = new Date();
         updateConfiguration(messageStoreService, account.getId(), account.getScopeId(), DataIndexBy.DEVICE_TIMESTAMP, MetricsIndexBy.TIMESTAMP, 30, true);
         for (String semanticTopicTmp : semanticTopic) {
-            KapuaDataMessage message1 = getMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
-            updateChannel(message1, semanticTopicTmp);
+            KapuaDataMessage message1 = createMessage(clientIds[0], account.getId(), device.getId(), receivedOn, capturedOn, sentOn);
+            setChannel(message1, semanticTopicTmp);
             message1.setReceivedOn(messageTime);
-            insertMessages(false, message1);
+            insertMessages(message1);
         }
-        waitEsRefresh();
+
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         ChannelInfoListResult channelList = doChannelInfoQuery(account, clientIds[0], "1/#", messageTime);
         checkChannelInfoClientIdsAndTopics(channelList, 0, null, null);
@@ -1030,25 +1146,19 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
     // ===========================================================
     // ===========================================================
 
-    private List<StorableId> insertMessages(boolean waitForElasticsearchRefreshTime, KapuaDataMessage... messages) throws InterruptedException {
-        List<StorableId> storableIds = new ArrayList<StorableId>();
+    private List<StorableId> insertMessages(KapuaDataMessage... messages) throws InterruptedException {
+        requireNonNull(messages);
+
+        List<StorableId> storableIds = new ArrayList<>(messages.length);
         for (KapuaDataMessage message : messages) {
             try {
                 storableIds.add(messageStoreService.store(message));
             } catch (Exception e) {
-                s_logger.error("Message insert exception!", e);
+                logger.error("Message insert exception!", e);
                 fail("Store messages should have succeded");
             }
         }
-        if (waitForElasticsearchRefreshTime) {
-            waitEsRefresh();
-        }
         return storableIds;
-    }
-
-    private void waitEsRefresh() throws InterruptedException {
-        // Wait ES indexes to be refreshed
-        Thread.sleep(elasticsearchRefreshTime.toMillis());
     }
 
     /**
@@ -1074,7 +1184,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param sentOn
      * @return
      */
-    private KapuaDataMessage getMessage(String clientId, KapuaId scopeId, KapuaId deviceId,
+    private KapuaDataMessage createMessage(String clientId, KapuaId scopeId, KapuaId deviceId,
             Date receivedOn, Date capturedOn, Date sentOn) {
         KapuaDataMessage message = new KapuaDataMessageImpl();
         message.setReceivedOn(receivedOn);
@@ -1093,9 +1203,11 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param message
      * @param semanticPart
      */
-    private void updateChannel(KapuaDataMessage message, String semanticPart) {
-        message.setChannel(new KapuaDataChannelImpl());
-        message.getChannel().setSemanticParts(new ArrayList<String>(Arrays.asList(semanticPart.split("/"))));
+    private void setChannel(KapuaDataMessage message, String semanticPart) {
+        final KapuaDataChannelImpl channel = new KapuaDataChannelImpl();
+        channel.setSemanticParts(new ArrayList<>(Arrays.asList(semanticPart.split("/"))));
+
+        message.setChannel(channel);
     }
 
     /**
@@ -1157,7 +1269,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         query.setFetchStyle(StorableFetchStyle.SOURCE_FULL);
         query.setLimit(10);
         query.setOffset(0);
-        List<SortField> order = new ArrayList<SortField>();
+        List<SortField> order = new ArrayList<>();
         SortField sf = new SortFieldImpl();
         sf.setField(EsSchema.MESSAGE_TIMESTAMP);
         sf.setSortDirection(SortDirection.DESC);
@@ -1177,7 +1289,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         query.setFetchStyle(StorableFetchStyle.SOURCE_FULL);
         query.setLimit(10);
         query.setOffset(0);
-        List<SortField> order = new ArrayList<SortField>();
+        List<SortField> order = new ArrayList<>();
         SortField sf = new SortFieldImpl();
         sf.setField(EsSchema.MESSAGE_TIMESTAMP);
         sf.setSortDirection(SortDirection.DESC);
@@ -1189,7 +1301,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
     private ChannelInfoListResult doChannelInfoQuery(Account account, String clientId, String channelFilter, Date queryDate) throws KapuaException {
         ChannelInfoQuery channelInfoQuery = getBaseChannelInfoQuery(account.getId());
         channelInfoQuery.setLimit(100);
-        setChannelInfoQueryChannelPredicateCriteria(channelInfoQuery, clientId, channelFilter, new DateRange(queryDate));
+        setChannelInfoQueryChannelPredicateCriteria(channelInfoQuery, clientId, channelFilter, null);
         return channelInfoRegistryService.query(channelInfoQuery);
     }
 
@@ -1204,7 +1316,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         query.setFetchStyle(StorableFetchStyle.SOURCE_FULL);
         query.setLimit(10);
         query.setOffset(0);
-        List<SortField> order = new ArrayList<SortField>();
+        List<SortField> order = new ArrayList<>();
         SortField sf = new SortFieldImpl();
         sf.setField(EsSchema.MESSAGE_TIMESTAMP);
         sf.setSortDirection(SortDirection.DESC);
@@ -1224,7 +1336,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         query.setFetchStyle(StorableFetchStyle.SOURCE_FULL);
         query.setLimit(10);
         query.setOffset(0);
-        List<SortField> order = new ArrayList<SortField>();
+        List<SortField> order = new ArrayList<>();
         SortField sf = new SortFieldImpl();
         sf.setField(EsSchema.MESSAGE_TIMESTAMP);
         sf.setSortDirection(SortDirection.DESC);
@@ -1240,13 +1352,13 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param order
      * @return
      */
-    private MessageQuery getMessageOrderedQuery(KapuaId scopeId, int limit, List<SortField> order) {
+    private MessageQuery getMessageOrderedQuery(KapuaId scopeId, int limit, List<OrderConstraint<?>> order) {
         MessageQuery query = new MessageQueryImpl(scopeId);
         query.setAskTotalCount(true);
         query.setFetchStyle(StorableFetchStyle.SOURCE_FULL);
         query.setLimit(limit);
         query.setOffset(0);
-        query.setSortFields(order);
+        query.setSortFields(order.stream().map(OrderConstraint::getField).collect(Collectors.toList()));
         return query;
     }
 
@@ -1343,13 +1455,13 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param order
      * @return
      */
-    private MetricInfoQuery getMetricInfoOrderedQuery(KapuaId scopeId, int limit, List<SortField> order) {
+    private MetricInfoQuery getMetricInfoOrderedQuery(KapuaId scopeId, int limit, List<OrderConstraint<?>> order) {
         MetricInfoQuery query = new MetricInfoQueryImpl(scopeId);
         query.setAskTotalCount(true);
         query.setFetchStyle(StorableFetchStyle.SOURCE_FULL);
         query.setLimit(limit);
         query.setOffset(0);
-        query.setSortFields(order);
+        query.setSortFields(order.stream().map(OrderConstraint::getField).collect(Collectors.toList()));
         return query;
     }
 
@@ -1431,7 +1543,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         if (messagesCount > 0) {
             assertNotNull("No result found!", result);
             assertNotNull("No result found!", result.getTotalCount());
-            assertEquals("Result message has a wrong size!", messagesCount, result.getTotalCount().intValue());
+            assertEquals("Query result has a wrong size!", messagesCount, result.getTotalCount().intValue());
             messageQueried = result.getFirstItem();
             assertNotNull("Result message is null!", messageQueried);
         } else {
@@ -1593,14 +1705,14 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      */
     private void checkChannelInfoClientIdsAndTopics(ChannelInfoListResult result, int clientInfoCount, String[] clientIds, String[] topics) {
         checkChannelInfoCount(result, clientInfoCount);
-        Set<String> allClientId = new HashSet<String>();
-        Set<String> allTopics = new HashSet<String>();
+        Set<String> allClientId = new HashSet<>();
+        Set<String> allTopics = new HashSet<>();
         for (ChannelInfo channelInfo : result.getItems()) {
             allClientId.add(channelInfo.getClientId());
             allTopics.add(channelInfo.getName());
         }
-        assertEquals("Wrong client ids size!", (clientIds != null ? clientIds.length : 0), allClientId.size());
-        assertEquals("Wrong topics size!", (topics != null ? topics.length : 0), allTopics.size());
+        assertEquals("Wrong client ids size!", clientIds != null ? clientIds.length : 0, allClientId.size());
+        assertEquals("Wrong topics size!", topics != null ? topics.length : 0, allTopics.size());
         if (clientIds != null) {
             for (String clientIdFound : clientIds) {
                 assertTrue(String.format("Cannot find the client [%s] in the client ids list!", clientIdFound), allClientId.contains(clientIdFound));
@@ -1642,14 +1754,14 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      */
     private void checkMetricInfoClientIdsAndMetricNames(MetricInfoListResult result, int metricInfoCount, String[] clientIds, String[] metrics) {
         checkMetricInfoCount(result, metricInfoCount);
-        Set<String> allClientId = new HashSet<String>();
-        Set<String> allMetrics = new HashSet<String>();
+        Set<String> allClientId = new HashSet<>();
+        Set<String> allMetrics = new HashSet<>();
         for (MetricInfo metricInfo : result.getItems()) {
             allClientId.add(metricInfo.getClientId());
             allMetrics.add(metricInfo.getName());
         }
-        assertEquals("Wrong client ids size!", (clientIds != null ? clientIds.length : 0), allClientId.size());
-        assertEquals("Wrong metrics size!", (metrics != null ? metrics.length : 0), allMetrics.size());
+        assertEquals("Wrong client ids size!", clientIds != null ? clientIds.length : 0, allClientId.size());
+        assertEquals("Wrong metrics size!", metrics != null ? metrics.length : 0, allMetrics.size());
         if (clientIds != null) {
             for (String clientIdFound : clientIds) {
                 assertTrue(String.format("Cannot find the client [%s] in the client ids list!", clientIdFound), allClientId.contains(clientIdFound));
@@ -1692,11 +1804,11 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      */
     private void checkClientInfo(ClientInfoListResult result, int clientInfoCount, String[] clientIds) {
         checkClientInfoCount(result, clientInfoCount);
-        Set<String> allClientId = new HashSet<String>();
+        Set<String> allClientId = new HashSet<>();
         for (ClientInfo clientInfo : result.getItems()) {
             allClientId.add(clientInfo.getClientId());
         }
-        assertEquals("Wrong client ids size!", (clientIds != null ? clientIds.length : 0), allClientId.size());
+        assertEquals("Wrong client ids size!", clientIds != null ? clientIds.length : 0, allClientId.size());
         if (clientIds != null) {
             for (String clientIdFound : clientIds) {
                 assertTrue(String.format("Cannot find the client [%s] in the client ids list!", clientIdFound), allClientId.contains(clientIdFound));
@@ -1712,6 +1824,40 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         // TODO
     }
 
+    private static class OrderConstraint<T extends Comparable<T>> {
+
+        private final SortField field;
+        private final Function<Object, T> valueFunction;
+
+        public OrderConstraint(final SortField field, final Function<Object, T> valueFunction) {
+            this.field = field;
+            this.valueFunction = valueFunction;
+        }
+
+        public SortField getField() {
+            return field;
+        }
+
+        public boolean validate(final Object previousItem, final Object currentItem) {
+            final T v1 = valueFunction.apply(previousItem);
+            final T v2 = valueFunction.apply(currentItem);
+
+            if (!v2.equals(v1)) {
+                checkNextValueCoherence(field, v2, v1);
+                return true;
+            }
+            return false;
+        }
+    }
+
+    private static <T extends Comparable<T>> OrderConstraint<T> orderConstraint(SortField field, Class<T> clazz) {
+        return new OrderConstraint<>(field, fieldFunction(field, clazz));
+    }
+
+    private static <T extends Comparable<T>> Function<Object, T> fieldFunction(SortField field, Class<T> clazz) {
+        return item -> getValue(item, field.getField(), clazz);
+    }
+
     /**
      * Check if the message result list is correctly ordered by the provided criteria (list of fields and ordering)
      *
@@ -1720,19 +1866,12 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param cleanComposedFieldName
      *            takes only the field part after the last dot (useful for clean up the composed field name)
      */
-    @SuppressWarnings("rawtypes")
-    private void checkListOrder(StorableListResult<?> result, List<SortField> sortFieldList) {
+    private static void checkListOrder(StorableListResult<?> result, List<OrderConstraint<?>> sortFieldList) {
         Object previousItem = null;
         for (Object item : result.getItems()) {
-            for (SortField field : sortFieldList) {
+            for (OrderConstraint<?> field : sortFieldList) {
                 if (previousItem != null) {
-
-                    Comparable currentValue = getValue(item, field.getField());
-                    Comparable previousValue = getValue(previousItem, field.getField());
-
-                    if (!currentValue.equals(previousValue)) {
-                        checkNextValueCoherence(field, currentValue, previousValue);
-                        // proceed with next message
+                    if (field.validate(previousItem, item)) {
                         break;
                     }
                 } else {
@@ -1750,12 +1889,13 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param currentValue
      * @param previousValue
      */
-    @SuppressWarnings({ "rawtypes", "unchecked" })
-    private void checkNextValueCoherence(SortField field, Comparable currentValue, Comparable previousValue) {
+    private static <T extends Comparable<T>> void checkNextValueCoherence(final SortField field, final T currentValue, final T previousValue) {
         if (SortDirection.ASC.equals(field.getSortDirection())) {
-            assertTrue(String.format("The field [%s] is not correctly ordered as [%s]!", field.getField(), field.getSortDirection()), currentValue.compareTo(previousValue) > 0);
+            assertTrue(String.format("The field [%s] is not correctly ordered as [%s] (%s -> %s)!", field.getField(), field.getSortDirection(), currentValue, previousValue),
+                    currentValue.compareTo(previousValue) > 0);
         } else {
-            assertTrue(String.format("The field [%s] is not correctly ordered as [%s]!", field.getField(), field.getSortDirection()), currentValue.compareTo(previousValue) < 0);
+            assertTrue(String.format("The field [%s] is not correctly ordered as [%s] (%s -> %s)!", field.getField(), field.getSortDirection(), currentValue, previousValue),
+                    currentValue.compareTo(previousValue) < 0);
         }
     }
 
@@ -1767,24 +1907,23 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param cleanComposedFieldName
      * @return
      */
-    @SuppressWarnings("rawtypes")
-    private Comparable getValue(Object object, String field) {
+    private static <T> T getValue(Object object, String field, Class<T> clazz) {
         try {
-            Class objetcClass = object.getClass();
+            Class<?> objetcClass = object.getClass();
             String getterFieldName = getFieldName(field, true);
             Method getMethod = getMethod(objetcClass, getterFieldName, "get");
             if (getMethod != null) {
-                return (Comparable) getMethod.invoke(object, new Object[0]);
+                return clazz.cast(getMethod.invoke(object, new Object[0]));
             }
             getMethod = getMethod(objetcClass, getterFieldName, "is");
             if (getMethod != null) {
-                return (Comparable) getMethod.invoke(object, new Object[0]);
+                return clazz.cast(getMethod.invoke(object, new Object[0]));
             }
             // else try by field access
             String fieldName = getFieldName(field, false);
             Field objField = getField(objetcClass, fieldName);
             if (objField != null) {
-                return (Comparable) objField.get(object);
+                return clazz.cast(objField.get(object));
             } else {
                 throw new IllegalArgumentException(String.format("Cannot find getter for field [%s] or field [%s] or the field value is not a Comparable value!", field, field));
             }
@@ -1801,7 +1940,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param cleanComposedFieldName
      * @return
      */
-    private String getFieldName(String field, boolean capitalizeFirstLetter) {
+    private static String getFieldName(String field, boolean capitalizeFirstLetter) {
         String str[] = cleanupFieldName(field);
         String fieldName = null;
         if (capitalizeFirstLetter) {
@@ -1815,7 +1954,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         return fieldName;
     }
 
-    private String[] cleanupFieldName(String field) {
+    private static String[] cleanupFieldName(String field) {
         int lastDot = field.lastIndexOf('.');
         if (lastDot > -1) {
             field = field.substring(lastDot + 1, field.length());
@@ -1835,8 +1974,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param prefix
      * @return
      */
-    @SuppressWarnings({ "rawtypes", "unchecked" })
-    private Method getMethod(Class objetcClass, String field, String prefix) {
+    private static Method getMethod(Class<?> objetcClass, String field, String prefix) {
         String fieldName = prefix + field.substring(0, 1).toUpperCase() + field.substring(1);
 
         Method objMethod = null;
@@ -1854,22 +1992,21 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
     /**
      * Return the field combining the prefix and the field name provided
      *
-     * @param objetcClass
+     * @param objectClass
      * @param field
      * @param prefix
      * @return
      */
-    @SuppressWarnings({ "rawtypes" })
-    private Field getField(Class objetcClass, String field) {
+    private static Field getField(Class<?> objectClass, final String field) {
         Field objField = null;
         do {
             try {
-                objField = objetcClass.getDeclaredField(field);
+                objField = objectClass.getDeclaredField(field);
                 objField.setAccessible(true);
             } catch (NoSuchFieldException e) {
-                objetcClass = objetcClass.getSuperclass();
+                objectClass = objectClass.getSuperclass();
             }
-        } while (objField == null && objetcClass != null);
+        } while (objField == null && objectClass != null);
 
         return objField;
     }
@@ -1888,11 +2025,12 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
      * @param storageEnabled
      * @throws KapuaException
      */
-    private void updateConfiguration(MessageStoreService messageStoreService, KapuaId scopeId, KapuaId parentId, DataIndexBy dataIndexBy, MetricsIndexBy metricsIndexBy, int dataTTL, boolean storageEnabled)
+    private void updateConfiguration(MessageStoreService messageStoreService, KapuaId scopeId, KapuaId parentId, DataIndexBy dataIndexBy, MetricsIndexBy metricsIndexBy, int dataTTL,
+            boolean storageEnabled)
             throws KapuaException {
         Map<String, Object> config = messageStoreService.getConfigValues(scopeId);
         if (config == null) {
-            config = new HashMap<String, Object>();
+            config = new HashMap<>();
         }
         if (dataIndexBy != null) {
             config.put(MessageStoreConfiguration.CONFIGURATION_DATA_INDEX_BY_KEY, dataIndexBy.name());
@@ -1940,16 +2078,12 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
 
     private class DateRange {
 
-        private Date lowerBound;
-        private Date upperBound;
-
-        public DateRange(Date bound) {
-            this(bound, bound);
-        }
+        private final Date lowerBound;
+        private final Date upperBound;
 
         public DateRange(Date lowerBound, Date upperBound) {
-            this.lowerBound = new Date(lowerBound.getTime() - QUERY_TIME_WINDOW);
-            this.upperBound = new Date(upperBound.getTime() + QUERY_TIME_WINDOW);
+            this.lowerBound = lowerBound;
+            this.upperBound = upperBound;
         }
 
         public Date getLowerBound() {
@@ -1981,7 +2115,7 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         KapuaDataChannelImpl channel = new KapuaDataChannelImpl();
         KapuaDataPayloadImpl messagePayload = new KapuaDataPayloadImpl();
         KapuaPositionImpl messagePosition = new KapuaPositionImpl();
-        Map<String, Object> metrics = new HashMap<String, Object>();
+        Map<String, Object> metrics = new HashMap<>();
 
         channel.setClientId(device.getClientId());
         channel.setSemanticParts(Arrays.asList("APP01"));
@@ -2011,9 +2145,11 @@ public class MessageStoreServiceTest extends AbstractMessageStoreServiceTest {
         assertNotNull(messageId);
         assertTrue(!messageId.toString().isEmpty());
 
-        //
-        // Wait ES indexes to be refreshed
-        Thread.sleep(elasticsearchRefreshTime.toMillis());
+        // Refresh indices before querying
+
+        refreshAllIndices(ElasticsearchClient.getInstance());
+
+        // start queries
 
         //
         // Retrieve the message from its id
